<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference android:summary="@string/pref_enable_background_auth_summary" android:key="@string/pref_EnableBackgroundAuth" android:title="@string/pref_enable_background_auth" android:defaultValue="true"/>
    <CheckBoxPreference android:key="@string/pref_NotifyAuthentication" android:title="@string/pref_NotifyAuthentication_title" android:defaultValue="false"/>
    <PreferenceCategory android:title="@string/pref_group_locked">
        <CheckBoxPreference android:title="@string/pref_check_autodisable_wifi" android:defaultValue="true" android:key="@string/pref_lockedAutoDisableWifi" android:summary="@string/pref_check_autodisable_wifi_summary" />
        <CheckBoxPreference android:key="@string/pref_ReenableWifiQuiet" android:title="@string/pref_check_reenable_wifi_quiet" android:defaultValue="true" android:summary="@string/pref_check_reenable_wifi_quiet_summary" />
        
    </PreferenceCategory><PreferenceCategory android:title="@string/prefcat_URL_title"><EditTextPreference android:title="@string/pref_URLToCheckHTTP_title" android:key="@string/pref_URLToCheckHTTP"/>
    
    <EditTextPreference android:title="@string/pref_URLToCheckHTTPS_title" android:key="@string/pref_URLToCheckHTTPS"/>
</PreferenceCategory>
    
    

</PreferenceScreen>
